# convex_polygon_billiards

./: .gitignore  .gitmodules  README.md
belousov-zhabotinsky-reaction/: README.md
convex_polygon_billiards/: CMakeLists.txt  README.md
convex_polygon_billiards/include/: particle.hpp  polygon.hpp  rng.hpp
convex_polygon_billiards/src/: main  main.cpp  particle.cpp  polygon.cpp  rng.cpp  simulation.cpp
include/: particle.hpp  simulation.hpp
src/: main.cpp  simulation.cpp
